After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795858 - OpenVPN process is not terminated on disconnection
OpenVPN process is not terminated on disconnection
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: VPN: openvpn
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
: 796335 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2018-05-06 17:56 UTC by ValdikSS
Modified: 2018-05-23 05:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
journalctl -f (11.57 KB, text/plain)
2018-05-06 17:56 UTC, ValdikSS
  Details
[PATCH] service: fix initialization of pid_data (1.14 KB, patch)
2018-05-09 22:08 UTC, Beniamino Galvani
none Details | Review

Description ValdikSS 2018-05-06 17:56:32 UTC
Created attachment 371763 [details]
journalctl -f

NetworkManager does not reliably terminate OpenVPN process upon VPN disconnection. It stays active about 1/5 of the time. The process is not re-used, new connection starts new process.

Here's a video demonstration with KDE plasma-nm applet, but it behaves the same with nmcli: https://bugs.kde.org/attachment.cgi?id=112440
Comment 1 Beniamino Galvani 2018-05-09 22:08:57 UTC
Created attachment 371872 [details] [review]
[PATCH] service: fix initialization of pid_data
Comment 2 ValdikSS 2018-05-09 22:17:38 UTC
This patch fixes the issue, thanks!
Comment 3 Thomas Haller 2018-05-11 12:57:53 UTC
(In reply to Beniamino Galvani from comment #1)
> Created attachment 371872 [details] [review] [review]
> [PATCH] service: fix initialization of pid_data

lgtm
Comment 4 Thomas Haller 2018-05-11 13:50:38 UTC
(In reply to ValdikSS from comment #2)
> This patch fixes the issue, thanks!

Thank you for testing.

Minor note: the presence of a patch attached for review, does not yet make the bug resolved. This upstream bug is only resolved, after the patch is merged to upstream master branch.
Comment 6 Beniamino Galvani 2018-05-23 05:14:51 UTC
*** Bug 796335 has been marked as a duplicate of this bug. ***