service: fix initialization of pid_data

The struct field 'is_terminating' is left uninitialized and this makes
pids_pending_send_sigterm() randomly ignore the openvpn process.

Fixes: c303f0d1599e6ae11b2c6ae0c10e4467ffd618d8

https://bugzilla.gnome.org/show_bug.cgi?id=795858